# src/routes/user.router.ts
@@ -8,8 +8,11 @@ import { body, check, validationResult } from 'express-validator';
 const router = express.Router();
 const controller = new UserController();
 
-router.get("/", async (_req, res) => {
-    const response = await controller.getUsers();
+router.get("/", async (req, res) => {
+    var queryLimit = Number(req.query?.limit);
+    var queryOffset = Number(req.query?.offset);
+
+    const response = await controller.getUsers(queryLimit, queryOffset);
     console.log(`back in user.controller/get, response: ${response}`);
     return res.send(response);
 });
@@ -18,7 +21,7 @@ router.get("/:id", async (req, res) => {
     var id = req.params.id;
     const response = await controller.getUser(id);
     if(!response) { 
-        return res.status(404).send( { message: "No user found with id="+id });
+        return res.status(404).send( { message: `No user found with id=${id}`} );
     }
     return res.send(response);
 });
@@ -36,19 +39,18 @@ router.post("/",
             "param":"email","location":"body"}]}
             and blocks user creation
         */
-        // UserMiddleware.isUniqueUser 
+        UserMiddleware.isUniqueUser 
 
         /* but this gives:
             {"errors":[{"value":"blah@email.comkdfkdkd","msg":"E-mail blah@email.comkdfkdkd 
             already in use","param":"email","location":"body"}]
         */
-        return UserService.readByEmail(value).then(user => {
-            if (user) {
-              return Promise.reject(`E-mail ${user.email} already in use`);
-            }
-          });
+        // return UserService.readByEmail(value).then(user => {
+        //     if (user) {
+        //       return Promise.reject(`E-mail ${user.email} already in use`);
+        //     }
+        //   });
         }),
-
     async (req: express.Request, res: express.Response) => {
         // Finds the validation errors in this request and wraps them in an object with handy functions
         const errors = validationResult(req);
@@ -62,5 +64,32 @@ router.post("/",
             return res.send(response);
         }
 });
+
+router.put("/:id", 
+        body('email').custom((value, { req }) => {
+            UserMiddleware.emailExistsOtherUser
+            // return UserService.readByEmail(value).then(user => {
+            //     console.log(`Found user with email=${value}. Checking to see if it's our existing user id=${req.params?.id}`)
+            //     if (user && user.id != req.params?.id) {
+            //         console.log(`Trying to update to user id=${req.params?.id} to existing email=${value} is a big no no`);
+            //       return Promise.reject(`E-mail ${user.email} already in use`);
+            //     }
+            //   });
+            }),
+        async (req: express.Request, res: express.Response) => {
+            // Finds the validation errors in this request and wraps them in an object with handy functions
+            const errors = validationResult(req);
+            if (!errors.isEmpty()) {
+                console.log(`uh oh, we got errors on the create user request! ${errors.array()[0]}`)
+                return res.status(400).json({ errors: errors.array() });
+            }
+            var id = req.params?.id;
+            //case where PUT to /users/null?
+            const response = await controller.updateUser(id, req.body);
+            if(!response) { 
+                return res.status(404).send( { message: `No user found with id=${id}` });
+            }
+            return res.send(response);
+        });
 
 export default router;
